--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,10 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
+    <modules>
+        <module>View</module>
+    </modules>
+
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
